# rss_feeder

./: .flake8  .gitignore  README.md  RSS_feeds.json  RSS_feeds_test.json  RSS_feeds_test_test.json  TODO  TODO.md  TODO.txt  backup_backup_data.data  backup_data  backup_data.data  backup_test.data  check_tree.py  check_tree2.py  conf.yaml  pyproject.toml  setup.py  test.py
gui/: App.py  AppState.py  GUIConf.py  MultiListbox.py  MultiSelectCombobox.py  Observer.py  TODO  gui.py  utils.py
gui/Frames/: EditGroup.py  EditPage.py  EntryForm.py  FilterWindow.py  IPage.py  InitPage.py  MainPage.py  ManageWindow.py  PostFrame.py  SearchWindow.py  StartPage.py  TabFrame.py  frames.py
src/profiler/: profiler.py
src/rss_feeder/: app.py  app_tui.py  links_parser.py  my_types.py  xml_feeder.py
